@@ -134,6 +134,8 @@ public class SysOperationLogService {
                 BaseModuleLogService moduleLogService = ModuleLogServiceFactory.getModuleLogService(operationLog.getModule());
 
                 if (moduleLogService != null) {
+                    moduleLogService.setOldValue(oldString);
+                    moduleLogService.setNewValue(newString);
                     differences = moduleLogService.handleLogField(differences, orgId);
                 } else {
                     handleDefaultDifferences(operationLog, differences);
@@ -178,7 +180,7 @@ public class SysOperationLogService {
                 .stream()
                 .filter(differ -> !Strings.CS.equalsAny(differ.getColumn(),
                         "organizationId", "createUser", "updateUser", "createTime", "updateTime", "departmentName", "supervisorName", "lastStage", "pos"))
-                .toList();
+                .collect(Collectors.toList());
         return differences;
     }
 }
